--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     //для json
     implementation 'com.android.volley:volley-cronet:1.2.1'
-    implementation 'com.squareuo.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'androidx.fragment:fragment-ktx:1.5.2'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
 
